--- a/styles/styles.css
+++ b/styles/styles.css
@@ -118,7 +118,7 @@ img {
       display: block;
     }
     .introduction-section{
-      font-size: 1.2rem;
+      font-size: 0.8rem;
     }
     .services-section {
       margin-top: 2rem;
@@ -138,11 +138,11 @@ img {
     padding: 2rem;
     padding-right: 2rem;
     display: flex;
+    height: fit-content;
+    width: fit-content;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100vh;
     background-color: #000;
   }
   
